src/objects/QPMS__Assessment_Options_Template__c.object
<CustomObject>
    <description>This is assessment option related object.</description>
    <fields>
        <fullName>QPMS__Correct_Answer__c</fullName>
        <description>This filed is used to store correct answer value</description>
        <label>Correct Answer</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Option1</fullName>
                </value>
                <value>
                    <fullName>Option2</fullName>
                </value>
                <value>
                    <fullName>Option3</fullName>
                </value>
                <value>
                    <fullName>Option4</fullName>
                </value>
                <value>
                    <fullName>Option5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__ExternalId__c</fullName>
        <description>For Assessment Importing</description>
        <externalId>true</externalId>
        <label>ExternalId</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>QPMS__External_Id__c</fullName>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Option1__c</fullName>
        <description>This field is used to store option1</description>
        <label>Option1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Option2__c</fullName>
        <description>This field is used to save option2</description>
        <label>Option2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Option3__c</fullName>
        <description>This field is used to store option3</description>
        <label>Option3</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Question_Number__c</fullName>
        <label>Question Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Question__c</fullName>
        <description>This field is used to store the assessment question</description>
        <label>Assessment Questions Template</label>
        <referenceTo>QPMS__Assessment_Questions_Template__c</referenceTo>
        <relationshipLabel>Assessment Options Templates</relationshipLabel>
        <relationshipName>Assessment_Options_Templates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Assessment Options Template</label>
    <nameField>
        <displayFormat>ATO-{0000}</displayFormat>
        <label>Assessment Options Template Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assessment Options Templates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>